# micromouse_rs

./: .gitignore  Cargo.toml  README.md  maze.txt  maze8x8.csv  optimal_route.csv  poyo.txt  search_route.csv
examples/: console_main.rs  parser_main.rs
main/: build_solver.rs  console_main.rs  gnu_main.rs  parameters.rs  parser_main.rs
maze_parser/: Cargo.toml
maze_parser/maze_data/: maze.txt
maze_parser/src/: file_io.rs  lib.rs  main.rs  parser.rs  wall.rs
src/: bash_process.rs  gnu_plotter.rs  io.rs  lib.rs  main.rs  wall.rs
src/maze_console/: console_manager.rs  maze_display.rs  maze_for_console.rs  mod.rs
visualizer/: Cargo.toml
visualizer/examples/: console.rs  console_main.rs  gnu.rs  gnu_main.rs
visualizer/src/: console.rs  console_display.rs  io.rs  lib.rs  main.rs  maze_plotter.rs  plotter.rs
visualizer/src/console/: maze_display.rs  mod.rs
visualizer/src/maze_console/: maze_display.rs
