[package]
name = "micromouse_rs"
version = "0.1.0"
authors = ["Ryunosuke <rew.7cc.12.1f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot="0.0.31"
dirs = "2.0.2"
console="0.9.0"

[[bin]]
name = "build_solver"
path = "main/build_solver.rs"

[[bin]]
name = "console"
path = "main/console_main.rs"

[[bin]]
name = "gnu"
path = "main/gnu_main.rs"

[[bin]]
name = "parser"
path = "main/parser_main.rs"