[package]
name = "visualizer"
version = "0.1.0"
authors = ["Ryunosuke <rew.7cc.12.1f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot="0.0.31"
dirs = "2.0.2"
console="*"

[[example]]
name = "gnu"
path = "examples/gnu.rs"

[[example]]
name = "console"
path = "examples/console.rs"
